--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,7 +3,7 @@ main:
   - title: "About"
     url: /about/
   - title: "Gallery"
-    url: /portifolio/    
+    url: /portfolio/    
   - title: "CV"
     url: /cv/
   
