--- a/_config.yml
+++ b/_config.yml
@@ -264,6 +264,7 @@ plugins:
   - jekyll-gist
   - jekyll-feed
   - jekyll-redirect-from
+  - jekyll-target-blank
 # mimic GitHub Pages with --safe
 whitelist:
   - jekyll-paginate
