--- a/_config.yml
+++ b/_config.yml
@@ -85,7 +85,7 @@ author:
   bio              : "Postdoctoral Research at CASUS"
   location         : "Görlitz, Germany"
   employer         : 
-  googlescholar    : "https://scholar.google.com.br/citations?user=mMCHQ9oAAAAJ&hl=en-us"
+  googlescholar    : "https://scholar.google.com/citations?hl=de&user=mMCHQ9oAAAAJ&view_op=list_works&sortby=pubdate"
   email            : "e.colombo@hzdr.de"
   #researchgate     :  # example: "https://www.researchgate.net/profile/yourprofile"
   uri              :
