--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "E.H. Colombo"
-  avatar           : "balseiro.jpge"
+  avatar           : "balseiro.jpg"
   bio              : "Postdoctoral Research at CASUS"
   location         : "Görlitz, Germany"
   employer         : 
